ingress-nginx/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # networking.gke.io/v1beta1.FrontendConfig: my-frontend-config
    # kubernetes.io/ingress.global-static-ip-name: external-ingress
spec: 
  # tls:
  # - hosts:
  #   - wiki.hooli.la    
  #   secretName: cert-prod 
  rules:
  - host: wiki.hooli.la
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wiki
              port:
                number: 80
